# staterail

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
actions/: __init__.py  dry_run.py  execution.py  gateway.py  venue_guard.py
app/: __init__.py  audit_anchor_store.py  audit_archive_store.py  bootstrap.py  config_fingerprint.py  config_loading.py  credentials.py  exchange_state_smoke.py  feed_smoke.py  ledger_config.py  ledger_export.py  ledger_health.py  ledger_health_acknowledgement.py  ledger_summary.py  ledger_view.py  live_no_order_preflight.py  live_preflight_gate.py  live_runtime_gate.py  live_safety.py  main.py  operator_actions.py  operator_canary.py  operator_policy_scenarios.py  product_catalog_smoke.py  readiness.py  smoke_checks.py  source_of_truth.py  strategy_scenario.py  strategy_simulation.py  strategy_simulation_gate.py  venue_contract.py
audit/: __init__.py  anchors.py  archives.py  checkpoints.py  ledger.py  replay.py  s3_object_lock.py  tasks.py
config/: __init__.py  assembly.py
core/: __init__.py  clock.py  engine.py  enums.py  errors.py  json_tools.py  order_update_contract.py
docs/: architecture.md  configuration.md  extending.md  operations.md  operator-guide.md  roadmap.md  strategy-taxonomy.md  system-diagram.md
exchanges/: __init__.py
feeds/: __init__.py  router.py  supervisor.py
hooks/: __init__.py  registry.py
orders/: __init__.py  lineage.py  sizing.py
products/: __init__.py  capabilities.py  catalog.py  replay.py  tasks.py
projections/: __init__.py  (+1 more)
(+125 files in other folders)
